# alphadesk

./: .gitignore
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  activity_feed.py  auth_middleware.py  config.py  main.py  pyproject.toml  universe_store.py  watchlist_store.py
backend/adapters/: __init__.py  alpaca_adapter.py  base.py  quiver_adapter.py  universe_scanner.py
backend/agents/: __init__.py  analyst_agent.py  scout_agent.py
backend/alerts/: __init__.py  pnl_scheduler.py  telegram_bot.py
backend/execution/: __init__.py  alpaca_executor.py  position_manager.py  risk_manager.py
backend/memory/: __init__.py  pinecone_memory.py
backend/models/: __init__.py  models.py
backend/routes/: __init__.py  agents.py  auth.py  trades.py  watchlist.py
backend/tests/: test_universe_scanner.py
frontend/: .dockerignore  Dockerfile
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/app/log/: page.tsx
frontend/src/app/login/: page.tsx
